jupiter/csvtmpl_format.c
/* Generated by re2c 4.5 */
/* This is -*- c -*- source. */
/* This is vim: set ft=c: source. */

#include <stdlib.h>
#include <stdarg.h>
#include <limits.h>
#include <errno.h>

#include "csvtmpl_format.h"
#include "csvutil.h"
#include "os/asprintf.h"



struct tval {
  char mode;
  union tval_data {
    int d;
    char *s;
  } data;
};

struct eval {
  char e;
  struct tval *ev;
  struct eval *p;
  struct eval *n;
};

/*
 * On some architectures (such as x86_64),
 * pointer to va_list cannot be handled correctly. So...
 */
struct vapp {
  va_list ap;
};

static struct tval *add_tval(char type, struct vapp *ap)
{
  struct tval *p = (struct tval*)malloc(sizeof(struct tval));
  if (p) {
    switch (type) {
    case 'd':
      p->data.d = va_arg(ap->ap, int);
      break;
    case 's':
      p->data.s = va_arg(ap->ap, char *);
      break;
    }
    p->mode = type;
  }
  return p;
}

static void free_tval(struct tval **t, size_t nt)
{
  size_t i;
  if (t) {
    for(i = 0; i != nt; ++i) {
      free(t[i]);
    }
  }
}

static struct eval *
add_eval(struct tval **t, size_t nt, char c, struct eval *l)
{
  struct eval *p;
  struct tval *tp;
  int ind;

  if (!t) { return NULL; }

  ind = -1;
  if (c >= 'A' && c <= 'Z') {
    ind = c - 'A';
  } else if (c >= 'a' && c <= 'z') {
    ind = c - 'a' + 26;
  }
  if (ind < 0 || (size_t)ind >= nt) { return NULL; }

  tp = t[ind];
  if (!tp) { return NULL; }

  p = (struct eval*)malloc(sizeof(struct eval));
  if (p) {
    p->e = c;
    p->ev = tp;
    p->p = l;
    p->n = NULL;
    if (l) {
      l->n = p;
    }
  }
  return p;
}

static void free_eval(struct eval *s)
{
  struct eval *n;
  if (!s) return;
  while(s) {
    n = s->n;
    free(s);
    s = n;
  }
}

#define TVAL_SIZE 52
static int char_to_tval_idx(unsigned char ch)
{
  unsigned char base;
  int offs;
  struct sp {
    const unsigned char *p;
  } p;

  p.p = &ch;
  for (;;) {
    
    {
      unsigned char yych;
      yych = *p.p;
      if (yych <= 'Z') {
        if (yych <= '@') goto yy1;
        if (yych <= 'I') goto yy2;
        if (yych <= 'R') goto yy3;
        goto yy4;
      } else {
        if (yych <= 'i') {
          if (yych >= 'a') goto yy5;
        } else {
          if (yych <= 'r') goto yy6;
          if (yych <= 'z') goto yy7;
        }
      }
yy1:
      ++p.p;
      { return -1; }
yy2:
      ++p.p;
      { base = 'A'; offs =  0; break; }
yy3:
      ++p.p;
      { base = 'J'; offs =  9; break; }
yy4:
      ++p.p;
      { base = 'S'; offs = 18; break; }
yy5:
      ++p.p;
      { base = 'a'; offs = 26; break; }
yy6:
      ++p.p;
      { base = 'j'; offs = 35; break; }
yy7:
      ++p.p;
      { base = 's'; offs = 44; break; }
    }


    CSVUNREACHABLE();
    return -1;
  }

  return ch - base + offs;
}

/* Format integers */
int format_integersv(char **retp, const char *fmt,
                     const char *format_keys, va_list ap)
{
  struct sp {
    const char *t;
    const char *p;
    const char *m;
  } p;

  struct vapp app;

  char *buf, *bufo;
  int pass;
  int cnt;
  char mode;

  /* flags */
  int left_adj, alter, plus, fsp;
  char pad_char;

  int columns, precs;
  int c, w, lp, nd;
  struct tval *embed_val;
  int evv;

  struct tval *tval_a[TVAL_SIZE]; /* A-Z, a-z */
  struct eval *eval_s, *eval_p;

  va_copy(app.ap, ap);

  CSVASSERT(fmt);

  eval_s = NULL;
  eval_p = NULL;
  for(cnt = 0; cnt < TVAL_SIZE; cnt++) {
    tval_a[cnt] = NULL;
  }

  mode = 'd';
  p.p = format_keys;
  for (;;) {
    struct tval *pp;

    p.t = p.p;
    
    {
      unsigned char yych;
      yych = *p.p;
      if (yych <= '@') {
        if (yych <= 0x00) goto yy9;
        if (yych == ' ') goto yy12;
        goto yy10;
      } else {
        if (yych <= '[') {
          if (yych <= 'Z') goto yy13;
          goto yy14;
        } else {
          if (yych <= '`') goto yy10;
          if (yych <= 'z') goto yy13;
          goto yy10;
        }
      }
yy9:
      ++p.p;
      { break; }
yy10:
      ++p.p;
yy11:
      { goto error; }
yy12:
      ++p.p;
      { continue; }
yy13:
      ++p.p;
      { goto addval; }
yy14:
      yych = *(p.m = ++p.p);
      if (yych == 'd') goto yy15;
      if (yych == 's') goto yy17;
      goto yy11;
yy15:
      yych = *++p.p;
      if (yych == ']') goto yy18;
yy16:
      p.p = p.m;
      goto yy11;
yy17:
      yych = *++p.p;
      if (yych == ']') goto yy19;
      goto yy16;
yy18:
      ++p.p;
      { mode = 'd'; continue; }
yy19:
      ++p.p;
      { mode = 's'; continue; }
    }


    CSVUNREACHABLE();
    return -1;

  addval:
    pp = add_tval(mode, &app);
    if (!pp) {
      free_tval(tval_a, TVAL_SIZE);
      return -1;
    }

    tval_a[char_to_tval_idx(*p.t)] = pp;
  }

  p.p = fmt;

  eval_s = NULL;
  eval_p = NULL;
  for (;;) {
    p.t = p.p;
    
    {
      unsigned char yych;
      yych = *p.p;
      if (yych <= 0x00) goto yy21;
      if (yych == '%') goto yy24;
      goto yy22;
yy21:
      ++p.p;
      { break; }
yy22:
      ++p.p;
yy23:
      { continue; }
yy24:
      yych = *(p.m = ++p.p);
      if (yych <= '+') {
        if (yych <= '#') {
          if (yych == ' ') goto yy26;
          if (yych <= '"') goto yy23;
          goto yy26;
        } else {
          if (yych == '%') goto yy28;
          if (yych <= '*') goto yy23;
          goto yy26;
        }
      } else {
        if (yych <= '9') {
          if (yych <= ',') goto yy23;
          if (yych == '/') goto yy23;
          goto yy26;
        } else {
          if (yych <= 'Z') {
            if (yych <= '@') goto yy23;
            goto yy26;
          } else {
            if (yych <= '`') goto yy23;
            if (yych <= 'z') goto yy26;
            goto yy23;
          }
        }
      }
yy25:
      yych = *++p.p;
yy26:
      if (yych <= '-') {
        if (yych <= '#') {
          if (yych == ' ') goto yy25;
          if (yych >= '#') goto yy25;
        } else {
          if (yych == '+') goto yy25;
          if (yych >= '-') goto yy25;
        }
      } else {
        if (yych <= '9') {
          if (yych <= '.') goto yy29;
          if (yych <= '/') goto yy27;
          if (yych <= '0') goto yy25;
          goto yy30;
        } else {
          if (yych <= 'Z') {
            if (yych >= 'A') goto yy31;
          } else {
            if (yych <= '`') goto yy27;
            if (yych <= 'z') goto yy31;
          }
        }
      }
yy27:
      p.p = p.m;
      goto yy23;
yy28:
      ++p.p;
      { continue; }
yy29:
      yych = *++p.p;
      if (yych <= '/') goto yy27;
      if (yych <= '9') goto yy32;
      goto yy27;
yy30:
      yych = *++p.p;
      if (yych <= '9') {
        if (yych == '.') goto yy29;
        if (yych <= '/') goto yy27;
        goto yy30;
      } else {
        if (yych <= 'Z') {
          if (yych <= '@') goto yy27;
        } else {
          if (yych <= '`') goto yy27;
          if (yych >= '{') goto yy27;
        }
      }
yy31:
      ++p.p;
      {
        struct eval *e = add_eval(tval_a, TVAL_SIZE, *(p.p - 1), eval_p);
        if (!e) { goto error; }
        if (!eval_s) eval_s = e;
        eval_p = e;
        continue;
      }
yy32:
      yych = *++p.p;
      if (yych <= '@') {
        if (yych <= '/') goto yy27;
        if (yych <= '9') goto yy32;
        goto yy27;
      } else {
        if (yych <= 'Z') goto yy31;
        if (yych <= '`') goto yy27;
        if (yych <= 'z') goto yy31;
        goto yy27;
      }
    }

  }

  for (pass = 0; pass < 2; ++pass) {
    p.p = fmt;
    eval_p = eval_s;

    if (pass) {
      buf = malloc(sizeof(char) * (cnt + 1));
      if (!buf) goto error;
      bufo = buf;
    } else {
      cnt = 0;
    }

    for (;;) {
      p.t = p.p;

      
      {
        unsigned char yych;
        yych = *p.p;
        if (yych <= 0x00) goto yy34;
        if (yych == '%') goto yy36;
        goto yy35;
yy34:
        ++p.p;
        {
          if (pass) {
            *(buf++) = '\0';
          } else {
            cnt++;
          }
          break;
        }
yy35:
        ++p.p;
        {
          if (pass) {
            *(buf++) = *p.t;
          } else {
            cnt++;
          }
          continue;
        }
yy36:
        yych = *++p.p;
        if (yych == '%') goto yy37;
        { goto percent; }
yy37:
        ++p.p;
        {
          if (pass) {
            *(buf++) = '%';
          } else {
            cnt++;
          }
          continue;
        }
      }

      continue;

    percent:
      left_adj = 0;
      plus = 0;
      alter = 0; /* this flag has no effect */
      pad_char = ' ';
      fsp = 0;
      if (!eval_p) goto error;
      embed_val = eval_p->ev;
      eval_p = eval_p->n;

      switch(embed_val->mode) {
      case 'd':
        goto fmt_int;
      case 's':
        goto fmt_str;
      }
      CSVUNREACHABLE();

    fmt_int:
      evv = embed_val->data.d;

      /* parse flags. */
      for (;;) {
        p.t = p.p;
        
        {
          unsigned char yych;
          yych = *p.p;
          if (yych <= '*') {
            if (yych <= ' ') {
              if (yych <= 0x00) goto yy39;
              if (yych <= 0x1F) goto yy40;
              goto yy41;
            } else {
              if (yych == '#') goto yy42;
              goto yy40;
            }
          } else {
            if (yych <= '-') {
              if (yych <= '+') goto yy43;
              if (yych <= ',') goto yy40;
              goto yy44;
            } else {
              if (yych == '0') goto yy45;
              goto yy40;
            }
          }
yy39:
          ++p.p;
          { goto error; }
yy40:
          ++p.p;
          { break; }
yy41:
          ++p.p;
          { fsp = 1; continue; }
yy42:
          ++p.p;
          { alter = 1; continue; }
yy43:
          ++p.p;
          { plus = 1; continue; }
yy44:
          ++p.p;
          { left_adj = 1; continue; }
yy45:
          ++p.p;
          { pad_char = '0'; continue; }
        }

      }

      if (plus) pad_char = ' ';
      p.p = p.t;
      columns = 0;
      precs = 0;

      /* padding */
      for (;;) {
        if (columns < 0) { goto error; }
        p.t = p.p;
        
        {
          unsigned char yych;
          yych = *p.p;
          if (yych <= 0x00) goto yy47;
          if (yych <= '/') goto yy48;
          if (yych <= '9') goto yy49;
          goto yy48;
yy47:
          ++p.p;
          { goto error; }
yy48:
          ++p.p;
          { break; }
yy49:
          ++p.p;
          { columns = columns * 10 + (*p.t - '0'); continue; }
        }

      }
      switch(embed_val->mode) {
      case 'd':
        if (fsp && columns > 0) { columns--; }
        break;
      default:
        CSVUNREACHABLE();
      }

      if (*p.t == '.') {
        /* precisions */
        for (;;) {
          if (precs < 0) { goto error; }
          p.t = p.p;
          
          {
            unsigned char yych;
            yych = *p.p;
            if (yych <= 0x00) goto yy51;
            if (yych <= '/') goto yy52;
            if (yych <= '9') goto yy53;
            goto yy52;
yy51:
            ++p.p;
            { goto error; }
yy52:
            ++p.p;
            { break; }
yy53:
            ++p.p;
            { precs = precs * 10 + (*p.t - '0'); continue; }
          }

        }
        if (precs > 0) {
          pad_char = ' ';
        }
      }

      /*
       * count number of charactors to be written.
       */
      if (evv != 0) {
        int it = (evv < 0) ? -evv : evv;
        nd = 0;
        while (it > 0) {
          nd++;
          it = it / 10;
        }
      } else {
        nd = 1;
      }
      c = (nd < precs) ? precs : nd;
      if (plus || evv < 0) {
        c++;
      }
      if (left_adj) {
        lp = 0;
      } else {
        if (columns > c) {
          lp = columns - c;
        } else {
          lp = 0;
        }
      }
      w = (c < columns) ? columns : c;
      if (fsp && columns > 0) w = w + 1;

      /* embed number */
      p.p = p.t;
      for (;;) {
        p.t = p.p;
        
        {
          unsigned char yych;
          yych = *p.p;
          if (yych <= 'Z') {
            if (yych <= 0x00) goto yy55;
            if (yych <= '@') goto yy56;
            goto yy57;
          } else {
            if (yych <= '`') goto yy56;
            if (yych <= 'z') goto yy57;
            goto yy56;
          }
yy55:
          ++p.p;
          { goto error; }
yy56:
          ++p.p;
          { goto error; }
yy57:
          ++p.p;
          {
            if (pass) {
              int t;
              if (!plus && fsp && evv >= 0) {
                *(buf++) = ' '; w--;
              }
              if (pad_char != ' ' && evv < 0) {
                *(buf++) = '-'; c--; w--;
              }
              while (lp-- > 0) { *(buf++) = pad_char; w--; }
              if (pad_char == ' ' && evv < 0) {
                *(buf++) = '-'; c--; w--;
              } else if (plus) {
                *(buf++) = '+'; c--; w--;
              }
              while (c > nd) { *(buf++) = '0'; c--; w--; }
              t = c;
              if (evv < 0) evv = -evv;
              while (c > 0)  {
                *(buf+c-1) = evv % 10 + '0';
                c--; w--; evv /= 10;
              }
              buf += t;
              while (w > 0) {
                *(buf++) = ' ';
                w--;
              }
            } else {
              cnt += w;
            }
            break;
          }
        }

      }
      continue; /* make sure in loop */

    fmt_str:
      /* String format does not allow setting width and precision */
      for (;;) {
        p.t = p.p;
        
        {
          unsigned char yych;
          yych = *p.p;
          if (yych <= 'Z') {
            if (yych <= 0x00) goto yy59;
            if (yych <= '@') goto yy60;
            goto yy61;
          } else {
            if (yych <= '`') goto yy60;
            if (yych <= 'z') goto yy61;
            goto yy60;
          }
yy59:
          ++p.p;
          { goto error; }
yy60:
          ++p.p;
          { goto error; }
yy61:
          ++p.p;
          {
            int n;
            n = strlen(embed_val->data.s);
            if (n < 0) { goto error; }
            if (pass) {
              strcpy(buf, embed_val->data.s);
              buf += n;
            } else {
              cnt += n;
            }
            break;
          }
        }

      }
      continue; /* make sure in loop */
    }

    if (!retp) {
      break;
    }
  }

  free_tval(tval_a, TVAL_SIZE);
  free_eval(eval_s);
  va_end(app.ap);

  if (retp) {
    *retp = bufo;
  }
  return cnt - 1;

 error:
  free_tval(tval_a, TVAL_SIZE);
  free_eval(eval_s);
  va_end(app.ap);
  return -1;
}

int format_integers(char **retp, const char *fmt,
                    const char *format_keys, ...)
{
  int r;
  va_list ap;
  va_start(ap, format_keys);
  r = format_integersv(retp, fmt, format_keys, ap);
  va_end(ap);
  return r;
}

int make_glob_pattern(char **retp, const char *fmt)
{
  char *buf;
  char *bufc;
  int sz;
  struct sp {
    const char *t;
    const char *p;
    const char *m;
  } p;
  int pass;
  int recurr;
